[gd_scene load_steps=6 format=3 uid="uid://c05mlav2iwcyn"]

[ext_resource type="PackedScene" uid="uid://b7bp01h3ukmvl" path="res://Source/UI/health_bar.tscn" id="1_c5g2f"]
[ext_resource type="Script" path="res://Source/UI/game_ui.gd" id="1_iqcp7"]
[ext_resource type="PackedScene" uid="uid://lh4sriyf8oyw" path="res://Source/UI/round_timer.tscn" id="3_k7voe"]
[ext_resource type="PackedScene" uid="uid://cxu0po5gqtrjb" path="res://Source/UI/round_score.tscn" id="3_w2kci"]
[ext_resource type="PackedScene" uid="uid://6tlpowwep7yo" path="res://Source/UI/stamina_bar.tscn" id="5_p0nsu"]

[node name="GameUI" type="CanvasLayer"]
script = ExtResource("1_iqcp7")

[node name="Player1HealthBar" parent="." instance=ExtResource("1_c5g2f")]
offset_left = 40.0
offset_right = 118.0
scale = Vector2(2, 2)

[node name="Player2HealthBar" parent="." instance=ExtResource("1_c5g2f")]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_right = 38.0
grow_horizontal = 0
scale = Vector2(-2, 2)

[node name="RoundTimer" parent="." instance=ExtResource("3_k7voe")]
position = Vector2(316, 40)

[node name="RoundP1G1" parent="." instance=ExtResource("3_w2kci")]
position = Vector2(178, 59)
scale = Vector2(0.4, 0.4)

[node name="RoundP1G2" parent="." instance=ExtResource("3_w2kci")]
position = Vector2(154, 59)
scale = Vector2(0.4, 0.4)

[node name="RoundP2G3" parent="." instance=ExtResource("3_w2kci")]
position = Vector2(448, 59)
scale = Vector2(0.4, 0.4)

[node name="RoundP2G4" parent="." instance=ExtResource("3_w2kci")]
position = Vector2(472, 59)
scale = Vector2(0.4, 0.4)

[node name="RoundEndMessage" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Player 1 Wins!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RoundStartMessage" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -54.0
offset_top = -13.0
offset_right = 54.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
text = "3"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Player1StaminaBar" parent="." instance=ExtResource("5_p0nsu")]
offset_left = 41.0
offset_top = 39.0
offset_right = 119.0
offset_bottom = 79.0

[node name="Player2StaminaBar" parent="." instance=ExtResource("5_p0nsu")]
offset_left = 600.0
offset_top = 82.0
offset_right = 678.0
offset_bottom = 122.0
scale = Vector2(-1, -1)
